nx/test/failing/bug_slice_batch_process_bounds/run.t
  $ ./bug_slice_batch_process_bounds.exe
  Testing slice batch processing bounds bug
  Input shape: [3; 4; 5]
  Unexpected exception: Invalid_argument("op_gather: data rank (3) and indices rank (1) must match")
  Fatal error: exception Invalid_argument("op_gather: data rank (3) and indices rank (1) must match")
  [2]
